[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/ScoreDisplay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/agane/Agane╠Ç 55 (roman).ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[node name="ScoreDisplay" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 268.0
margin_bottom = 1080.0

[node name="BestChain" type="Label" parent="HBoxContainer/Labels"]
margin_right = 268.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Best Chain"

[node name="ScoreLabel" type="Label" parent="HBoxContainer/Labels"]
margin_top = 52.0
margin_right = 268.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Total Score "

[node name="Values" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 272.0
margin_right = 569.0
margin_bottom = 1080.0

[node name="BestChain" type="Label" parent="HBoxContainer/Values"]
margin_right = 297.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreValue" type="Label" parent="HBoxContainer/Values"]
margin_top = 52.0
margin_right = 297.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
text = "00000000000"
